--- a/src_reserve/makefile.forward
+++ b/src_reserve/makefile.forward
@@ -7,7 +7,7 @@ include makefile.in
 objects=meshfree_solver.o parameter.o data_structure_d.o point_preprocessor.o utilities.o initial_conditions.o q_lskum_d.o \
 point_normals_d.o generate_connectivity_d.o fpi_solver_d.o q_variables_d.o flux_residual_d.o wall_fluxes_d.o \
 interior_fluxes_d.o outer_fluxes_d.o limiters_d.o state_update_d.o objective_function_d.o \
-compute_force_coeffs_d.o compute_entropy_d.o post_processing.o split_fluxes_d.o quadrant_fluxes_d.o stagnation_values_d.o data_structure.o\
+compute_force_coeffs_d.o compute_entropy_d.o post_processing.o split_fluxes_d.o quadrant_fluxes_d.o stagnation_values_d.o \
 file_ops.o
 #petsc_data_structure.o
 #compute_enstrophy_d.o
@@ -15,7 +15,7 @@ file_ops.o
 # quadrant_fluxes_d.o
 
 execname: $(objects)
-	$(FC)  -o execname $(FFLAGS) $(objects)
+	$(FC) -ggdb -Wall -o execname $(FFLAGS) $(objects)
 	#$(PETSC_LIB)
 
 SOURCEFILES = $(wildcard $(SRC)
@@ -26,16 +26,16 @@ meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure_d.o p
 parameter.o: parameter.F90
 	$(FC) $(FFLAGS)  -c  parameter.F90
 
-point_preprocessor.o: point_preprocessor.F90 data_structure.o #petsc_data_structure.o
+point_preprocessor.o: point_preprocessor.F90 data_structure_d.o #petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  point_preprocessor.F90
 
-post_processing.o: post_processing.F90 data_structure.o #petsc_data_structure.o
+post_processing.o: post_processing.F90 data_structure_d.o #petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  post_processing.F90
 
-data_structure.o: data_structure.F90 parameter.o
-	$(FC) $(FFLAGS) -c  data_structure.F90
+# data_structure.o: data_structure.F90 parameter.o
+#	$(FC) $(FFLAGS) -c  data_structure.F90
 
-file_ops.o: file_ops.F90 data_structure.o
+file_ops.o: file_ops.F90 data_structure_d.o
 	$(FC) $(FFLAGS) -c file_ops.F90
 
 # petsc_data_structure.o: petsc_data_structure.F90 parameter.o data_structure_d.o
@@ -47,7 +47,7 @@ file_ops.o: file_ops.F90 data_structure.o
 utilities.o: utilities.F90
 	$(FC) $(FFLAGS) -c  utilities.F90
 
-initial_conditions.o: initial_conditions.F90 parameter.o data_structure.o #petsc_data_structure.o
+initial_conditions.o: initial_conditions.F90 parameter.o data_structure_d.o #petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  initial_conditions.F90
 
 # quadrant_fluxes.o: quadrant_fluxes.F90 parameter.o
@@ -108,7 +108,7 @@ limiters_d.o: limiters_d.F90 data_structure_d.o
 objective_function_d.o: objective_function_d.F90 data_structure_d.o compute_entropy_d.o compute_force_coeffs_d.o #compute_enstrophy_d.o
 	$(FC) $(FFLAGS) -c  objective_function_d.F90
 
-compute_force_coeffs_d.o: compute_force_coeffs_d.F90 data_structure_d.o data_structure.o #petsc_data_structure.o
+compute_force_coeffs_d.o: compute_force_coeffs_d.F90 data_structure_d.o data_structure_d.o #petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  compute_force_coeffs_d.F90
 
 # compute_enstrophy_d.o: compute_enstrophy_d.F90 data_structure_d.o #petsc_data_structure.o
@@ -117,7 +117,7 @@ compute_force_coeffs_d.o: compute_force_coeffs_d.F90 data_structure_d.o data_str
 compute_entropy_d.o: compute_entropy_d.F90 data_structure_d.o #petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  compute_entropy_d.F90
 
-stagnation_values_d.o: stagnation_values_d.F90 data_structure_d.o data_structure.o
+stagnation_values_d.o: stagnation_values_d.F90 data_structure_d.o data_structure_d.o
 	$(FC) $(FFLAGS) -c  stagnation_values_d.F90
 clean::
 	rm -rf *.mod execname *.o
